[workspace]

members = [
  "bitcoin-test-utils",
  "bitcoin-rpc-provider",
  "p2pd-oracle-client",
  "dlc",
  "dlc-messages",
  "dlc-trie",
  "dlc-manager",
  "mocks",
  "sample",
  "dlc-sled-storage-provider",
  "electrs-blockchain-provider",
  "simple-wallet",
]

[patch.crates-io]
lightning = { git = "https://github.com/get10101/rust-lightning/", rev = "77fc8a11b0f10fb7e31f246b59a37455d4f0d41d" }
lightning-block-sync = { git = "https://github.com/get10101/rust-lightning/", rev = "77fc8a11b0f10fb7e31f246b59a37455d4f0d41d" }
lightning-net-tokio = { git = "https://github.com/get10101/rust-lightning/", rev = "77fc8a11b0f10fb7e31f246b59a37455d4f0d41d" }
lightning-persister = { git = "https://github.com/get10101/rust-lightning/", rev = "77fc8a11b0f10fb7e31f246b59a37455d4f0d41d" }
