[workspace]

members = [
  "bitcoin-test-utils",
  "bitcoin-rpc-provider",
  "p2pd-oracle-client",
  "dlc",
  "dlc-messages",
  "dlc-trie",
  "dlc-manager",
  "mocks",
  "sample",
  "simple-wallet",
  "dlc-sled-storage-provider",
  "electrs-blockchain-provider",
]

[patch.crates-io]
lightning = { git = "https://github.com/get10101/rust-lightning/", rev = "90d363e210162a9a6d3f4dce17db30098d20dd7c" }
lightning-net-tokio = { git = "https://github.com/get10101/rust-lightning/", rev = "90d363e210162a9a6d3f4dce17db30098d20dd7c" }
lightning-persister = { git = "https://github.com/get10101/rust-lightning/", rev = "90d363e210162a9a6d3f4dce17db30098d20dd7c" }
