[package]
authors = ["Crypto Garage"]
description = "Sled backend for persisting Discreet Log Contracts (DLC)."
edition = "2018"
homepage = "https://github.com/p2pderivatives/rust-dlc"
license-file = "../LICENSE"
name = "dlc-sled-storage-provider"
repository = "https://github.com/p2pderivatives/rust-dlc/tree/master/dlc-sled-storage-provider"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.29"
dlc-manager = {path = "../dlc-manager"}
lightning = {version = "0.0.113"}
secp256k1-zkp = {version = "0.7.0"}
simple-wallet = {path = "../simple-wallet"}
sled = "0.34"
