[package]
authors = ["Crypto Garage"]
description = "Oracle interface implementation for the p2pderivatives oracle."
homepage = "https://github.com/p2pderivatives/rust-dlc"
license-file = "../LICENSE"
name = "p2pd-oracle-client"
repository = "https://github.com/p2pderivatives/rust-dlc/tree/master/p2pd-oracle-client"
version = "0.1.0"

[dependencies]
bitcoin = {version = "0.29.2", features= ["serde"]}
chrono = {version = "0.4.19", features = ["serde"]}
dlc-manager = {path = "../dlc-manager"}
dlc-messages = {path = "../dlc-messages", features = ["use-serde"]}
secp256k1-zkp = {version = "0.7.0" }
serde = {version = "*", features = ["derive"]}
ureq = {version = "2.5", features = ["json"]}

[dev-dependencies]
mockito = "0.31.0"
