[package]
authors = ["Crypto Garage"]
description = "Oracle interface implementation for the p2pderivatives oracle."
homepage = "https://github.com/p2pderivatives/rust-dlc"
license-file = "../LICENSE"
name = "p2pd-oracle-client"
repository = "https://github.com/p2pderivatives/rust-dlc/tree/master/p2pd-oracle-client"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = {version = "0.4.19", features = ["serde"]}
dlc-manager = { version = "0.4.0" }
dlc-messages = { version = "0.4.0", features = ["use-serde"]}
reqwest = {version = "0.11", features = ["json"]}
secp256k1-zkp = {version = "0.7.0" }
serde = {version = "*", features = ["derive"]}

[dev-dependencies]
mockito = "0.31.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
pollster = "0.3.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = {version = "0.11", features = ["blocking", "json"]}

